--- a/Hometask1/index.html
+++ b/Hometask1/index.html
@@ -22,7 +22,7 @@
                     <li><a class="nav" href="#">TEAM</a></li>
                     <li><a class="nav" href="#">REVIEWS</a></li>
                     <li><a class="nav" href="#">CONTACTS</a></li>
-                    <li><a class="phone baige" href="+7 (928) 768-32-39">+7 (928) 768-32-39</a></li>
+                    <li><a class="phone baige" href="tel:+7 (928) 768-32-39">+7 (928) 768-32-39</a></li>
                 </ul>
             </nav>
             <button class='button button-header'>REQUEST A CALL</button>
@@ -39,7 +39,7 @@
                     cost of materials due to the organization of work
                 </div>    
                 <div class="button-block flex-row">
-                    <button class="button-calculate">calculate the cost</button>
+                    <button class="button">calculate the cost</button>
                     <button class="button-submit">submit your application</button>
                 </div>
             </div>
@@ -121,13 +121,11 @@
                 <div class="input-group">
                     <div class='name-input'>
                         <div class="title-input">Name</div>
-                        <div class="question-input">What is your name:</div>
-                        <input class="input"></input>
+                         <input class="input" placeholder = "What is your name:"></input>
                     </div>
                     <div class="phone-input">
                         <div class="title-input">Phone</div>
-                        <div class="question-input">Your phone number:</div>
-                        <input class="input"></input>
+                        <input class="input" placeholder = "Your phone number:"></input>
                     </div>
                     <div class="div-button">
                         <button class="button button-center">SUBMIT</button>
@@ -194,65 +192,64 @@
                 </div>
             </div>
         </div>
-        <div class="forth-page flex-row">
-            <div class='main-block-list'>
-                <div class="action-list-item flex-row">
-                    <div class="circle-number">
-                        <div class="number-in-circle">01</div>
+        <div class="forth-page">
+            <div class="content flex-row">
+                <div class='main-block-list'>
+                    <div class="action-list-item flex-row">
+                        <div class="circle-number">
+                            <div class="number-in-circle">01</div>
+                        </div>
+                        <div class="action-description">Our specialist will arrive for measurements per day <br />
+                            contact, or appoint a date convenient for you
+                        </div>
                     </div>
-                    <div class="action-description">Our specialist will arrive for measurements per day <br />
-                        contact, or appoint a date convenient for you
+                    <div class="action-list-item flex-row">
+                        <div class="circle-number">
+                            <div class="number-in-circle">02</div>
+                        </div>
+                        <div class="action-description">Free metering</div>
+                    </div>
+                    <div class="action-list-item flex-row">
+                        <div class="circle-number">
+                            <div class="number-in-circle">03</div>
+                        </div>
+                        <div class="action-description">Free consultation</div>
+                    </div>
+                    <div class="action-list-item flex-row">
+                        <div class="circle-number">
+                            <div class="number-in-circle">04</div>
+                        </div>
+                        <div class="action-description">Get a cost estimate and <br />
+                            the timing of your future repairs
+                        </div>
                     </div>
                 </div>
-                <div class="action-list-item flex-row">
-                    <div class="circle-number">
-                        <div class="number-in-circle">02</div>
+                <form class='black-block'>
+                    <div class="black-block-title">Leave a request for free <br />
+                        departure of the measurer
                     </div>
-                    <div class="action-description">Free metering</div>
-                </div>
-                <div class="action-list-item flex-row">
-                    <div class="circle-number">
-                        <div class="number-in-circle">03</div>
+                    <div class='name-input'>
+                        <div class="title-input gray">Name</div>
+                        <input class="input input-black input-wide white" placeholder = "What is your name:"></input>
+                        <div class="string-under-input"></div>
                     </div>
-                    <div class="action-description">Free consultation</div>
-                </div>
-                <div class="action-list-item flex-row">
-                    <div class="circle-number">
-                        <div class="number-in-circle">04</div>
+                    <div class="name-input">
+                        <div class="title-input gray">Phone</div>
+                        <input class="input input-black input-wide white" placeholder = "Your phone number:"></input>
+                        <div class="string-under-input"></div>
                     </div>
-                    <div class="action-description">Get a cost estimate and <br />
-                        the timing of your future repairs
+                    <div class="name-input">
+                        <div class="title-input gray">Email</div>
+                        <input class="input input-black input-wide white" placeholder = "Your email"></input>
+                        <div class="string-under-input"></div>
                     </div>
-                </div>
+                    <div class="checkbox black-checkbox">
+                        <input type="checkbox" id="checkbox_2">
+                        <label for="checkbox_2" class="white">I agree to the processing of personal data</label>
+                    </div>
+                    <button class="button measurer">call the measurer</button>
+                </form>
             </div>
-            <form class='black-block'>
-                <div class="black-block-title">Leave a request for free <br />
-                    departure of the measurer
-                </div>
-                <div class='name-input'>
-                    <div class="title-input gray">Name</div>
-                    <div class="question-input white">What is your name:</div>
-                    <input class="input input-black input-wide white"></input>
-                    <div class="string-under-input"></div>
-                </div>
-                <div class="name-input">
-                    <div class="title-input gray">Phone</div>
-                    <div class="question-input white">Your phone number:</div>
-                    <input class="input input-black input-wide white"></input>
-                    <div class="string-under-input"></div>
-                </div>
-                <div class="name-input">
-                    <div class="title-input gray">Email</div>
-                    <div class="question-input white">Your email</div>
-                    <input class="input input-black input-wide white"></input>
-                    <div class="string-under-input"></div>
-                </div>
-                <div class="checkbox black-checkbox">
-                    <input type="checkbox" id="checkbox_2">
-                    <label for="checkbox_2" class="white">I agree to the processing of personal data</label>
-                </div>
-                <button class="button measurer">call the measurer</button>
-            </form>
         </div>
         <div class="left-block flex-row">
             <div class="baige-circle">
@@ -388,21 +385,18 @@
                 <div class="input-row flex-row content">   
                     <div class='name-input question-input-block'>
                         <div class="title-input gray">Name</div>
-                        <div class="question-input white">What is your name:</div>
-                        <input class="input input-transparent input-width white"></input>
+                        <input class="input input-transparent input-width white" placeholder = "What is your name:"></input>
                         <div class="string-under-input-small"></div>
                     </div>
                     <div class="name-input question-input-block">
                         <div class="title-input gray">Phone</div>
-                        <div class="question-input white">Your phone number:</div>
-                        <input class="input input-transparent input-width white"></input>
+                        <input class="input input-transparent input-width white" placeholder = "Your phone number:"></input>
                         <div class="string-under-input-small"></div>
                     </div>
                 </div> 
                 <div class="name-input question-input-block input-center content">
                     <div class="title-input gray">Question</div>
-                    <div class="question-input white">I want to know:</div>
-                    <input class="input input-transparent input-wider1 white"></input>
+                    <input class="input input-transparent input-wider1 white" placeholder = "I want to know:"></input>
                     <div class="string-under-input-big"></div>
                 </div>
                 <div class="checkbox black-checkbox question-input-block checkbox-center">
@@ -440,7 +434,7 @@
                         <li><a class="nav" href="#">TEAM</a></li>
                         <li><a class="nav" href="#">REVIEWS</a></li>
                         <li><a class="nav" href="#">CONTACTS</a></li>
-                        <li><a class="nav baige" href="+7 (928) 768-32-39">+7 (928) 768-32-39</a></li>
+                        <li><a class="nav baige" href="tel:+7 (928) 768-32-39">+7 (928) 768-32-39</a></li>
                     </ul>
                 </nav>
                 <button class='button'>REQUEST A CALL</button>
